Docs: add book API swagger annotation
